# solid-rag-toolbox

./: LICENSE  README.md  docker-compose.yaml
documentation/: README.md  docusaurus.config.ts  package-lock.json
documentation/docs/: intro.md
documentation/docs/access-control-setup/: _category_.json  resources.md  scopes-and-policies.md
documentation/docs/policies/: _category_.json  resources.md  scopes-and-policies.md
documentation/docs/usage/: _category_.json  adding-data.md  authentication.mdx  authorization-authentication.mdx  search-embeddings.md
documentation/src/components/HomepageFeatures/: index.tsx
documentation/src/pages/: index.tsx
keycloak-config/: realm-export.json
psx-chunk-api/: .gitignore  Application.pkl  README.md  config.yaml  pyproject.toml  taskfile.yaml
psx-chunk-api/app/: __main__.py
psx-chunk-api/app/config/: config.py
psx-chunk-api/app/models/: documents.py
psx-chunk-api/app/repo/: chroma.py
psx-chunk-api/app/routers/: chunk.py  common.py
psx-chunk-api/app/tests/: test_chunking.py  test_utils.py
psx-chunk-api/app/utils/: chunking.py  utils.py
psx-keycloak-auth-middleware/: .dockerignore  .gitignore  Application.pkl  Schema.pkl  config.pkl  config.yaml  docker-compose.yaml  pyproject.toml  taskfile.yaml
psx-keycloak-auth-middleware/app/: __main__.py
psx-keycloak-auth-middleware/app/models/: payloads.py
psx-keycloak-auth-middleware/app/repo/: keycloak.py
psx-keycloak-auth-middleware/app/routers/: auth.py  auth_v2.py  common.py  status.py
psx-keycloak-auth-middleware/app/utils/: status_queue.py
psx-vector-api/: Application.pkl  Dockerfile  README.md  config.yaml  docker-compose.yaml  pyproject.toml
psx-vector-api/app/: __main__.py
psx-vector-api/app/config/: config.py  load.py
psx-vector-api/app/models/: search.py
psx-vector-api/app/repo/: chroma.py
psx-vector-api/app/routers/: common.py  search.py
