[tool.poetry]
authors = ["kutlu69", "taeyma42"]
description = ""
name = "psx-chunk-api"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
fastapi = "^0.111.0"
pydantic-settings = "^2.2.1"
python = "~3.12"
uvicorn = "^0.29.0"
chromadb-client = "0.5.4.dev0"
sentence_transformers = "^3.0.1"
pytest = "^8.3.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.generators.dependencies]
datamodel-code-generator = "^0.25.6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
pythonpath = "app"
addopts = [
    "--import-mode=importlib",
]
